--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+.game-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: radial-gradient(circle, #000, #3d013d); 
+  height: 100vh;
+}
+
 .app {
   display: flex;
   padding: 30px;
@@ -8,9 +16,23 @@
   height: 560px;
   display: flex;
   flex-wrap: wrap;
+  background-color: lightslategray;
+  border-radius: 2rem;
+  padding: 2rem;
+  margin: 2rem;
 }
 
 .game img {
   width: 70px;
   height: 70px;
+}
+
+.scoreBoard {
+  border-radius: 2rem;
+  background-color: lightslategray;
+  padding: 1rem;
+  border-style: solid;
+  border-color: lightslategray;
+  border-width: 1px 2px;
+  color: wheat;
 }
